# mpoly

./: CMakeLists.txt  LICENSE  README.md  mpoly.h  polynomials.h  test.cxx
cmake/: mpoly-config.cmake.in
